--- a/scr/CGO3read.lpi
+++ b/scr/CGO3read.lpi
@@ -4,7 +4,7 @@
     <Version Value="12"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="CGO3read"/>
+      <Title Value="TyphoonH UART tool"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -41,6 +41,7 @@
       <Unit>
         <Filename Value="CGO3read.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="YTHtool"/>
       </Unit>
       <Unit>
         <Filename Value="cgo3read_main.pas"/>
@@ -54,12 +55,16 @@
         <Filename Value="../../common_units/mav_msg.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="msg57.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="CGO3read"/>
+      <Filename Value="YTHtool"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
