--- a/scr/CGO3read.lpi
+++ b/scr/CGO3read.lpi
@@ -4,7 +4,7 @@
     <Version Value="12"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="TyphoonH UART tool"/>
+      <Title Value="CGO3+ UART tool"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -53,11 +53,7 @@
         <UnitName Value="CGO3read_main"/>
       </Unit>
       <Unit>
-        <Filename Value="../../common_units/mav_msg.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="msg57.pas"/>
+        <Filename Value="../../../common_units/mav_msg.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
@@ -65,11 +61,11 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="YTHtool"/>
+      <Filename Value="CGO3PUARTtool"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="../../common_units"/>
+      <OtherUnitFiles Value="../../../common_units"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <CodeGeneration>
@@ -77,6 +73,9 @@
       <Checks>
         <IOChecks Value="True"/>
       </Checks>
+      <Optimizations>
+        <OptimizationLevel Value="3"/>
+      </Optimizations>
       <SmallerCode Value="True"/>
     </CodeGeneration>
     <Linking>
